[Angelos Boules]: Fixed Hamburger icon placement on mobile screens in place of absolute positioning // Removed getAccentColor function from profile page as well as some restructuring and css adjustment

--- a/src/layouts/NexusLayout.module.css
+++ b/src/layouts/NexusLayout.module.css
@@ -23,11 +23,10 @@
 }
 
 .hamburger {
-    position: absolute;
-    top: 65px;
-    left: 30px;
-    z-index: 1000;
     border: 1px solid #CCCCCC;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .offcanvas {
